# safelua

./: .travis.yml  CMakeLists.txt  README.md  Vagrantfile  alloc.c  alloc.h  safelua.c  safelua.h  tests.c  tests.sh
cmake/Modules/: FindLua52.cmake
