CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/" ${CMAKE_MODULE_PATH})
PROJECT(safelua C)

# Sets up project-wide include dirs
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

FIND_PACKAGE(Lua52 REQUIRED)
INCLUDE_DIRECTORIES(${LUA52_INCLUDE_DIRS})

# Testing
ADD_EXECUTABLE(tests tests.c)
TARGET_LINK_LIBRARIES(tests ${LUA52_LIBRARIES})
